# SplitCoffee

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
.run/: Python tests in tests.run.xml  runner.run.xml
splitcoffee/: CoffeeShop.py  __main__.py  base.py  cli.py  runner.py
splitcoffee/model/: Menu.py  MenuItem.py  Person.py  SplitCoffeeState.py
splitcoffee/resources/: menu_items.json  people.json
splitcoffee/service/: SplitCoffeeService.py
tests/: conftest.py  test_base.py  test_coffee_shop.py  test_menu.py  test_menu_item.py  test_person.py  test_split_coffee_service.py
